UI Registration Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,14 @@
     <string name="logint_button_text">Войти</string>
     <string name="registration_button_text">Зарегистрироваться</string>
     <string name="no_profile_text">Нет профиля?</string>
+    <!--    END     -->
+
+    <!--    Registration    -->
+    <string name="placeholder_nameCompany">Название компании</string>
+    <string name="placeholder_address">Адрес</string>
+    <string name="select_role">Выберите роль</string>
+    <string name="client_role">Клиент</string>
+    <string name="printhub_role">Владелец принтера</string>
+    <!--    END     -->
 
 </resources>
