--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,13 @@
     <string name="developer_3">Ярусова Татьяна 1304</string>
     <!--    END -->
 
+    <!--    Order card  -->
+    <string name="status_create">Создан</string>
+    <string name="order_number">Заказ №1</string>
+    <string name="print_hub_name">Печатный центра: Хамелеон</string>
+    <string name="address_print_hub">Адрес: Санкт-Петербург, улица Попова 5Б</string>
+    <string name="date_of_create">Дата создания: 15.03.2025</string>
+    <string name="date_of_last_change">Дата последнего обновления: 15.03.2025</string>
+    <!--    END -->
+
 </resources>
