--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,21 @@
     <string name="placeholder_choose_address">Введите адрес центра</string>
     <!--    END     -->
 
+    <!--    Add Order Parameters Screen  -->
+    <string name="A1">A1</string>
+    <string name="A2">A2</string>
+    <string name="A3">A3</string>
+    <string name="A4">A5</string>
+    <string name="A5">A6</string>
+    <string name="A6">A7</string>
+    <string name="show_price">Посмотреть прайс-лист</string>
+    <string name="select_format_print">Выберите формат печати</string>
+    <string name="count_list">Количество листов</string>
+    <string name="add_file">Прикрепить файл</string>
+    <string name="total_price">Итого: %s ₽</string>
+    <string name="placeholder_comment">Комментарий</string>
+    <string name="create_order_button_text">Оформить заказ</string>
+    <!--    END     -->
+
+
 </resources>
