Main Printhub Screen and Order Printhub Card UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,13 @@
     <string name="reject_button">Отмена</string>
     <!--    END     -->
 
+    <!--    Order printhub card  -->
+    <string name="status_new">Новый</string>
+    <!--    END     -->
+
+    <!--    Main Printhub Screen    -->
+    <string name="placeholder_choose_order_number">Введите номер заказа</string>
+    <!--    END     -->
 
 
 
