--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <!--    END     -->
 
     <!--    Registration    -->
-    <string name="placeholder_nameCompany">Название компании</string>
+    <string name="placeholder_nameCompany">Название компании пользователя</string>
     <string name="placeholder_address">Адрес</string>
     <string name="select_role">Выберите роль</string>
     <string name="client_role">Клиент</string>
